--- a/yesod-auth-oauth2.cabal
+++ b/yesod-auth-oauth2.cabal
@@ -1,3 +1,7 @@
+-- This file has been generated from package.yaml by hpack version 0.17.1.
+--
+-- see: https://github.com/sol/hpack
+
 name:            yesod-auth-oauth2
 version:         0.2.4
 license:         BSD3
@@ -8,83 +12,96 @@ synopsis:        OAuth 2.0 authentication plugins
 description:     Library to authenticate with OAuth 2.0 for Yesod web applications.
 category:        Web
 stability:       Experimental
-cabal-version:   >= 1.8
+cabal-version:   >= 1.10
 build-type:      Simple
 homepage:        http://github.com/thoughtbot/yesod-auth-oauth2
-
-flag network-uri
-   description: Get Network.URI from the network-uri package
-   default: True
-
-flag example
-  description: Build the example application
-  default: False
-
-library
-    if flag(network-uri)
-        build-depends: network-uri >= 2.6
-    else
-        build-depends: network < 2.6
-
-    build-depends:   base                    >= 4.5       && < 5
-                   , bytestring              >= 0.9.1.4
-                   , http-client             >= 0.4.0     && < 0.6
-                   , http-conduit            >= 2.0       && < 3.0
-                   , http-types              >= 0.8       && < 0.10
-                   , aeson                   >= 0.6       && < 1.1
-                   , yesod-core              >= 1.2       && < 1.5
-                   , authenticate            >= 1.3.2.7   && < 1.4
-                   , random
-                   , yesod-auth              >= 1.3       && < 1.5
-                   , text                    >= 0.7       && < 2.0
-                   , yesod-form              >= 1.3       && < 1.5
-                   , transformers            >= 0.2.2     && < 0.6
-                   , hoauth2                 >= 0.4.7     && < 0.6
-                   , lifted-base             >= 0.2       && < 0.4
-                   , vector                  >= 0.10      && < 0.12
-
-    exposed-modules: Yesod.Auth.OAuth2
-                     Yesod.Auth.OAuth2.Github
-                     Yesod.Auth.OAuth2.Google
-                     Yesod.Auth.OAuth2.Spotify
-                     Yesod.Auth.OAuth2.Upcase
-                     Yesod.Auth.OAuth2.EveOnline
-                     Yesod.Auth.OAuth2.Nylas
-                     Yesod.Auth.OAuth2.Slack
-                     Yesod.Auth.OAuth2.Salesforce
-                     Yesod.Auth.OAuth2.Bitbucket
-                     Yesod.Auth.OAuth2.BattleNet
-
-    ghc-options:     -Wall
-
-executable yesod-auth-oauth2-example
-  if flag(example)
-    buildable: True
-  else
-    buildable: False
-
-  hs-source-dirs:      example
-  main-is:             main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , containers
-                     , http-conduit
-                     , load-env
-                     , text
-                     , warp
-                     , yesod
-                     , yesod-auth
-                     , yesod-auth-oauth2
-
-test-suite test
-  type:              exitcode-stdio-1.0
-  main-is:           Spec.hs
-  hs-source-dirs:    test
-  ghc-options:       -Wall
-  build-depends:   base
-                 , yesod-auth-oauth2
-                 , hspec
+bug-reports:     https://github.com/thoughtbot/yesod-auth-oauth2.git/issues
 
 source-repository head
-  type:     git
-  location: https://github.com/thoughtbot/yesod-auth-oauth2.git
+    type: git
+    location: https://github.com/thoughtbot/yesod-auth-oauth2.git
+
+flag example
+    description: Build the example application
+    manual: False
+    default: False
+
+flag network-uri
+    description: Get Network.URI from the network-uri package
+    manual: False
+    default: True
+
+library
+    build-depends:
+          base >=4.5 && <5
+        , bytestring >=0.9.1.4
+        , http-client >=0.4.0 && <0.6
+        , http-conduit >=2.0 && <3.0
+        , http-types >=0.8 && <0.10
+        , aeson >=0.6 && <1.2
+        , yesod-core >=1.2 && <1.5
+        , authenticate >=1.3.2.7 && <1.4
+        , random
+        , yesod-auth >=1.3 && <1.5
+        , text >=0.7 && <2.0
+        , yesod-form >=1.3 && <1.5
+        , transformers >=0.2.2 && <0.6
+        , hoauth2 >=0.4.7 && <1.4
+        , lifted-base >=0.2 && <0.4
+        , vector >=0.10 && <0.13
+        , uri-bytestring >=0.2 && <0.3
+    if flag(network-uri)
+        build-depends:
+              network-uri >=2.6
+    else
+        build-depends:
+              network <2.6
+    exposed-modules:
+          Yesod.Auth.OAuth2
+          Yesod.Auth.OAuth2.Github
+          Yesod.Auth.OAuth2.Google
+          Yesod.Auth.OAuth2.Spotify
+          Yesod.Auth.OAuth2.Upcase
+          Yesod.Auth.OAuth2.EveOnline
+          Yesod.Auth.OAuth2.Nylas
+          Yesod.Auth.OAuth2.Slack
+          Yesod.Auth.OAuth2.Salesforce
+          Yesod.Auth.OAuth2.Bitbucket
+          Yesod.Auth.OAuth2.BattleNet
+    other-modules:
+          Paths_yesod_auth_oauth2
+    default-language: Haskell2010
+    ghc-options: -Wall
+
+executable yesod-auth-oauth2-example
+    hs-source-dirs:
+          example
+    main-is: main.hs
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    build-depends:
+          base
+        , containers
+        , http-conduit
+        , load-env
+        , text
+        , warp
+        , yesod
+        , yesod-auth
+        , yesod-auth-oauth2
+    if !(flag(example))
+        buildable: False
+    default-language: Haskell2010
+
+test-suite test
+    type: exitcode-stdio-1.0
+    main-is: Spec.hs
+    hs-source-dirs:
+          test
+    ghc-options: -Wall
+    build-depends:
+          base
+        , yesod-auth-oauth2
+        , hspec
+    other-modules:
+          Yesod.Auth.OAuth2Spec
+    default-language: Haskell2010
